Fix wrapping

--- a/hackerstash/static/scss/components/_editor.scss
+++ b/hackerstash/static/scss/components/_editor.scss
@@ -74,6 +74,7 @@
   height: 500px;
   overflow: hidden;
   padding: 0;
+  white-space: pre-wrap;
 
   &.light {
     height: 160px;
